--- a/templates/editor.mustache
+++ b/templates/editor.mustache
@@ -35,7 +35,7 @@ Example context (json):
                         </div>
                     </div>
                 </div>
-                    <div id="annotation-canvas" class="d-none">
+                    <div id="annotation-canvas" class="d-none w-0">
                         <div id="video-block"
                              class="position-absolute w-100 h-100"
                              style="z-index: 1"></div>
