--- a/templates/mobile.mustache
+++ b/templates/mobile.mustache
@@ -25,4 +25,4 @@
 }}
 
 {{=<% %>=}}
-<core-iframe src="<% config.wwwroot %>/mod/interactivevideo/view.php?iframe=1&id=<% cmid %>&lang=<% lang %>&token=<% token %>" [allowFullscreen]="true"></core-iframe>
+<core-iframe src="<% config.wwwroot %>/mod/interactivevideo/view.php?mobileapp=1&iframe=1&id=<% cmid %>&lang=<% lang %>&token=<% token %>" [allowFullscreen]="true"></core-iframe>
