--- a/templates/captionmenu.mustache
+++ b/templates/captionmenu.mustache
@@ -24,7 +24,7 @@
     }
 }}
 
-<div class="btn-group dropup d-none" id="changecaption">
+<div class="btn-group dropup d-none" id="changecaption" data-uniqid="{{uniqid}}">
             <span role="button"
                   data-toggle="dropdown"
                   aria-haspopup="true"
