--- a/templates/player.mustache
+++ b/templates/player.mustache
@@ -184,7 +184,7 @@ Example context (json):
                   role="button"
                   title="{{#str}}play, mod_interactivevideo{{/str}}"
                   id="playpause"
-                  class="btn border-0 btn-sm btn-control text-white bg-transparent py-0 px-0 mr-1">
+                  class="btn border-0 btn-sm btn-control text-white bg-transparent py-0 px-0">
                 <i class="bi bi-play-fill fs-25px"></i>
             </span>
             {{^displayoptions.disablechapternavigation}}
